# LC_base_classes

./: .editorconfig  CMakeLists.txt  README.md
cmake/: LC_base_classesConfig.cmake.in
lib/include/LC/utils/: NonCopyable.hpp  NonMovable.hpp  Polymorphic.hpp  ScopeGuard.hpp
tests/: CMakeLists.txt  NonCopyable.cpp  NonMovable.cpp  Polymorphic.cpp  ScopeGuard.cpp
